...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/action_bar4"
    tools:context=".Login">

    <Button
        android:id="@+id/btnRegisterStudents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@drawable/button_bg"
        android:text="Register Students"
        app:layout_constraintWidth_percent=".8"
        android:textStyle="bold"
        app:iconTint="#F5F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
